[gd_scene load_steps=4 format=3 uid="uid://k05mh66k8gs8"]

[ext_resource type="PackedScene" uid="uid://27jqipt5besq" path="res://objects/puzzle_piece/lever.glb" id="1_mjvco"]
[ext_resource type="Script" path="res://objects/puzzle_piece/lever.gd" id="1_rb0he"]
[ext_resource type="PackedScene" uid="uid://csbchge3673bh" path="res://lib/object_handler/object_handler.tscn" id="2_0lywk"]

[node name="Lever" type="Node3D"]
script = ExtResource("1_rb0he")

[node name="Model" parent="." instance=ExtResource("1_mjvco")]

[node name="ObjectHandler" parent="." instance=ExtResource("2_0lywk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63193, 0.520368)
collision_size = Vector3(1, 3.5, 3)
trigger_mode = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="activated" from="ObjectHandler" to="." method="_on_object_handler_activated"]
[connection signal="triggered" from="ObjectHandler" to="." method="_on_object_handler_triggered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
